@@ -42,18 +42,19 @@ namespace L1Topo {
     uint32_t m_word;
   };
 
+  //! Helper for printing
+  std::ostream& operator<<(std::ostream&, const L1TopoTOB&);
+  
+  //! Comparison operators, based on word
+  bool operator==(const L1TopoTOB&, const L1TopoTOB&);
+  //! Comparison operators, based on word
+  bool operator!=(const L1TopoTOB&, const L1TopoTOB&);
+  //! Comparison operators, based on word
+  bool operator< (const L1TopoTOB&, const L1TopoTOB&);
+  //! Comparison operators, based on word
+  bool operator> (const L1TopoTOB&, const L1TopoTOB&);
+
 } // namespace L1Topo
 
-//! Helper for printing
-std::ostream& operator<<(std::ostream&, const L1Topo::L1TopoTOB&);
-
-//! Comparison operators, based on word
-bool operator==(const L1Topo::L1TopoTOB&, const L1Topo::L1TopoTOB&);
-//! Comparison operators, based on word
-bool operator!=(const L1Topo::L1TopoTOB&, const L1Topo::L1TopoTOB&);
-//! Comparison operators, based on word
-bool operator< (const L1Topo::L1TopoTOB&, const L1Topo::L1TopoTOB&);
-//! Comparison operators, based on word
-bool operator> (const L1Topo::L1TopoTOB&, const L1Topo::L1TopoTOB&);
 
 #endif // L1TOPORDO_L1TOPOTOB_H
