@@ -71,28 +71,15 @@ namespace L1Topo {
     return (m_ctp_signal >> 2) & 0x1;
   }
 
+  std::ostream& operator<<(std::ostream& os, const L1TopoTOB& c) {
+    os << "     L1Topo TOB: "
+       << " ctp_signal 0x" << std::hex << c.ctp_signal() << std::dec
+       << " ( index " << c.index() << " clock " << c.clock() << " fpga " << c.fpga() << " )"
+       << " overflow bits 0b" << std::bitset<8>(c.overflow_bits())
+       << " trigger bits 0b" << std::bitset<8>(c.trigger_bits())
+       << std::dec << "\n";
+    return os;
+  }
+
 } // namespace L1Topo
-
-std::ostream& operator<<(std::ostream& os, const L1Topo::L1TopoTOB& c) {
-  os << "     L1Topo TOB: "
-     << " ctp_signal 0x" << std::hex << c.ctp_signal() << std::dec
-     << " ( index " << c.index() << " clock " << c.clock() << " fpga " << c.fpga() << " )"
-     << " overflow bits 0b" << std::bitset<8>(c.overflow_bits())
-     << " trigger bits 0b" << std::bitset<8>(c.trigger_bits())
-     << std::dec << "\n";
-  return os;
-}
-
-bool operator==(const L1Topo::L1TopoTOB& lhs, const  L1Topo::L1TopoTOB& rhs){
-  return (lhs.word()==rhs.word());
-}
-bool operator!=(const L1Topo::L1TopoTOB& lhs, const  L1Topo::L1TopoTOB& rhs){
-  return (lhs.word()!=rhs.word());
-}
-bool operator<(const L1Topo::L1TopoTOB& lhs, const  L1Topo::L1TopoTOB& rhs){
-  return (lhs.word()<rhs.word());
-}
-bool operator>(const L1Topo::L1TopoTOB& lhs, const  L1Topo::L1TopoTOB& rhs){
-  return (lhs.word()>rhs.word());
-}
   
